# space_invaders_repo

./: README.md  pyproject.toml
src/space_invaders_package/: main.py
src/space_invaders_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/space_invaders_package/docs/: conf.py
src/space_invaders_package/docs/_build/doctrees/: environment.pickle  index.doctree  main.doctree  modules.doctree  source.doctree  tests.doctree
src/space_invaders_package/docs/_build/html/: .buildinfo  genindex.html  index.html  main.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  source.html  tests.html
src/space_invaders_package/docs/_build/html/_modules/: index.html
src/space_invaders_package/docs/_build/html/_modules/source/: classes.html
src/space_invaders_package/docs/_build/html/_modules/tests/: test.html
src/space_invaders_package/docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  source.rst.txt
src/space_invaders_package/source/: __init__.py  classes.py  constants.py
tests/: __init__.py  test.py
