[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "space_invaders_package"
version = "0.1"
authors = [
  { name = "Michal Szynkaruk" }
]
description = "Final project"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MlCHAL-S/space_invaders_repo"

[dependencies]
pygame = "2.1.0"